Fix friends panel on ios

--- a/src/Dialogues/Friends.css
+++ b/src/Dialogues/Friends.css
@@ -2,7 +2,6 @@
     padding: 0;
     display: flex;
     flex-direction: column;
-    height: 100%;
     
     h1 {
         vertical-align: text-top;
